added simple html to display informations

--- a/src/main/resources/templates/about_us.html
+++ b/src/main/resources/templates/about_us.html
@@ -2,17 +2,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments :: html_head">
-    <title id="pageTitle">Dodaj pojazd</title>
+    <title id="pageTitle">O nas</title>
 </head>
 <body>
 <div th:replace="fragments :: navbar"></div>
+
 <section id="main">
     <div class="inner">
-        <div th:replace="fragments :: new_vehicle"></div>
+        <h1>O nas</h1>
     </div>
 </section>
-<div th:replace="fragments :: footer">
-</div>
 
+<div th:replace="fragments :: footer">
+
+</div>
 </body>
 </html>
