--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -2,17 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="fragments :: html_head">
-    <title id="pageTitle">Dodaj pojazd</title>
+    <title id="pageTitle">Kontakt</title>
 </head>
 <body>
-<div th:replace="fragments :: navbar"></div>
+<div th:replace="fragments :: navbar">
+
+</div>
 <section id="main">
     <div class="inner">
-        <div th:replace="fragments :: new_vehicle"></div>
+        <h1>KONTAKT</h1>
     </div>
 </section>
-<div th:replace="fragments :: footer">
-</div>
-
+<div th:replace="fragments :: footer"></div>
 </body>
 </html>
